--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
+    "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.7",
     "slugify": "^1.6.0"
   }
